k3d-blackred-demo/assets/traefik-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: admin
      port: 8080
    - protocol: TCP
      name: websecure
      port: 8443
  selector:
    app: traefik
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: demo
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami

---
apiVersion: v1
kind: Service
metadata:
  name: whoami-secure
  namespace: demo
spec:
  ports:
    - protocol: TCP
      name: web-secure
      port: 8443
  selector:
    app: whoami

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  ports:
    - protocol: TCP
      name: admin
      port: 8080
  selector:
    app: traefik
