k3d-blackred-demo/assets/demo-sites.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo-red
  name: demo-red
  labels:
    app: demo-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-red
  template:
    metadata:
      labels:
        app: demo-red
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: red-html
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo-black
  name: demo-black
  labels:
    app: demo-black
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-black
  template:
    metadata:
      labels:
        app: demo-black
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: black-html
---
apiVersion: v1
kind: Service
metadata:
  name: demo-red-service
  namespace: demo-red
spec:
  selector:
    app: demo-red
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-black-service
  namespace: demo-black
spec:
  selector:
    app: demo-black
  ports:
    - protocol: TCP
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: black-ingress
  namespace: demo-black
spec:
  entryPoints:
    - web
    - websecure
  routes:
  # - match: Host(`redblack.fragtom.de`) && PathPrefix(`/whoami`)
  - match: PathPrefix(`/black`)
    kind: Rule
    services:
    - name: demo-black-service
      port: 80
    # - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
    #   kind: Rule
    #   services:
    #     - name: api@internal
    #       kind: TraefikService


---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: red-ingress
  namespace: demo-red
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: PathPrefix(`/red`)
    kind: Rule
    services:
    - name: demo-red-service
      port: 80
